# mscxyz

./: .gitattributes  .gitignore  .python-version  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Justfile  LICENSE  MANIFEST.in  Makefile  MuseScore.py  MuseScore_batch-4-parallel.py  MuseScore_clean-and-import-lieder-style.py  MuseScore_get-all-files.py  MuseScore_read-vbox.py  MuseScore_sync-metaTags.py  README.md  README.rst  README_footer.rst  README_header.rst  README_template.rst  TODO.md  _generate-readme.py  _test_real-binary.py  _version.py  autocomplete.bash  autocomplete.tcsh  autocomplete.zsh  cli_template.rst  conf.py  description  generate-readme.sh  index.rst  mscxyz.py  musescore.py  pyproject.toml  pytest.ini  run-test.sh  setup.cfg  (+2 more)
.github/workflows/: publish-to-pypi.yml  test.yml  tests.yml
doc/: Makefile
doc/source/: cli.rst  conf.py  index.rst  modules.rst  mscxyz.rst
docs/: cli.rst  conf.py  index.rst  main-module.rst  modules.rst  other-submodules.rst  requirements.in  requirements.txt  submodule-lyrics.rst  submodule-meta.rst  submodule-score.rst  submodule-style.rst  submodule-xml.rst
docs/stubs/: mscxyz.Score.rst  mscxyz.list_files.rst  mscxyz.list_path.rst
mscxyz/: __init__.py  _version.py  batch.py  cli.py  cli_legacy.py  cli_ng.py  export.py  fields.py  fileloader.py  generate-readme.sh  lyrics.py  meta.py  mscxyz.py  parse.py  rename.py  score.py  score_file_classes.py  settings.py  settings_ng.py  style.py  style3_names.py  style4_names.py  tree.py  utils.py  xml.py
scripting/: list.py
src/mscxyz/: __init__.py  cli.py  export.py  fields.py  meta.py  rename.py  score.py  settings.py  style_names.py  utils.py  xml.py
test/: helper.py  mscxyz.ini  parse.py  test.py  test_api.py  test_clean.py  test_cli.py  test_command_line_interface.py  test_init.py  test_lyrics.py  test_meta.py  test_parse.py  test_rename.py  test_score_file_classes.py  test_utils.py
test/docker-test-image/: Dockerfile  README.md  docker-compose.yml
test/files/: Ragtime_3.mscx  Zum-Tanze-da-geht-ein-Maedel.mscx  broken.mscx  formats.mscx  lyrics-fix.mscx  meta-all-values.mscx  meta-duplicates.mscx  meta-real-world.mscx  no-vbox.mscx  style.mss  unicode.mscx  without-style.mscx
test/files/batch/: batch1.mscx
test/files_mscore2/: Reunion.mscx  lyrics-remap.mscx  meta-all-values.mscx  meta-duplicates-move-subtitle.mscx
test/files_mscore3/: Getting_Started_English.mscx  Triumph.mscx  chords.mscx  clean.mscx  formats.mscx  lyrics.mscx  meta-all-values.mscx  meta-duplicates.mscx  meta-real-world.mscx  no-vbox.mscx  simple.mscz  simple_not-converted.mscx  style.mss  without-style.mscx
tests/: _test_real-binary.py  conftest.py  helper.py  test.py  test_api.py  test_cli.py  test_cli_legacy.py  test_command_line_interface.py  test_complex_tasks.py  test_examples.py  test_export.py  test_fields.py  test_gui.py  test_how_to.py  test_init.py  test_lyrics.py  test_meta.py  test_real-binary.py  test_rename.py  test_score.py  test_score_file_classes.py  test_style.py  test_utils.py  test_xml.py
tests/files/by_version/2/: All_Dudes.mscx  Getting_Started_English.mscx  Triumph.mscx  meta-distribute-field.mscx  score.mscz
tests/files/by_version/3/: Ragtime_3.mscx  Reunion.mscx  meta-distribute-field.mscx  meta-duplicates-move-subtitle.mscx  score-v3.mscx  score-v3.mscz  score-v3.mss  simple.mscx  unicode.mscx
tests/files/by_version/3/batch/: batch3.mscx
tests/files/by_version/4/: All_Dudes.mscx  All_Dudes.mscz  Drunken-Sailor.mscz  Getting_Started_English.mscz  Im-Fruehtau-zu-Berge.mscz  Jazz.mss  Ragtime_3.mscz  Reunion.mscz  Title - Composer.mscz  Triumph.mscz  Zum-Tanze-da-geht-ein-Maedel.mscz  chords.mscz  clean.mscz  formats.mscz  instrument_excerpt.mscz  lyrics-fix.mscz  lyrics-remap.mscz  lyrics.mscz  lyrics_number-of-verses.mscz  meta-all-values.mscz  meta-distribute-field.mscz  meta-duplicates-move-subtitle.mscz  meta-duplicates.mscz  meta-real-world.mscz  meta-vbox-styled.mscz  no-vbox.mscz  score-v4.mscz  score.mscz  simple.mscz  unicode.mscz  without-style.mscz
tests/files/by_version/4/All_Dudes/: All_Dudes.mscx  audiosettings.json  chordlist.xml  score_style.mss
tests/files/by_version/4/Getting_Started_English/: Getting_Started_English.mscx  score_style.mss
tests/files/by_version/4/Im-Fruehtau-zu-Berge/: Im-Fruehtau-zu-Berge.mscx  (+2 more)
tests/files_mscore2/: Ragtime_3.mscx  Title - Composer.mscx  chords.mscx  formats.mscx  lyrics.mscx
tests/files_mscore3/: Zum-Tanze-da-geht-ein-Maedel.mscx  lyrics-fix.mscx  lyrics-remap.mscx
tests/files_mscore4/: test.mscz
tests/files_mscore4/simple/: audiosettings.json
typings/lxml/: ElementInclude.pyi  __init__.pyi  _elementpath.pyi  builder.pyi  cssselect.pyi  doctestcompare.pyi  sax.pyi  usedoctest.pyi
typings/lxml/html/: __init__.pyi  _setmixin.pyi  defs.pyi
typings/lxml/isoschematron/: __init__.pyi
(+45 files in other folders)
