[project]
name = "mscxyz"
version = "4.0.0"
description = "A command line tool to manipulate the XML based *.mscX and *.mscZ files of the notation software MuseScore."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
keywords = ["audio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "lxml>=5.4.0",
    "lxml-stubs>=0.5.1",
    "shtab>=1.8.0",
    "termcolor>=3.3.0",
    "tmep>=3.0.1",
]

[project.urls]
Homepage = "https://mscxyz.readthedocs.io"
Repository = "https://github.com/Josef-Friedrich/mscxyz"

[project.scripts]
musescore-manager = "mscxyz.cli:execute"

[dependency-groups]
dev = [
    "readme-patcher>=0,<1",
    "tox>=4,<5",
    "ruff>=0,<1",
    "pytest>=8,<9",
    "mypy>=1,<2",
    "pip-tools>=7,<8",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[[tool.readme_patcher.file]]
src = "README_template.rst"
dest = "README.rst"

[[tool.readme_patcher.file]]
src = "cli_template.rst"
dest = "docs/cli.rst"

[tool.pytest]
python_files = "*_test.py"

[tool.pytest.ini_options]
markers = ["only", "slow", "gui"]

[tool.pyright]
reportPrivateUsage = false

[tool.mypy]
strict = true
